Implement WebRTC client in Chip controller.
Authors: Raveendra Karu (r.karu@samsung.com)
         Chayan Ailawalia (c.ailawalia@samsung.com)

Signed-off-by: Raveendra Karu <r.karu@samsung.com>

--- a/src/controller/BUILD.gn
+++ b/src/controller/BUILD.gn
@@ -118,6 +118,7 @@ static_library("controller") {
   ]
 
   cflags = [ "-Wconversion" ]
+  public_deps += [ "${chip_root}/src/controller/webrtc:chip_webrtc" ]
 
   public_configs = [ "${chip_root}/src:includes" ]
 }
