--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -22,22 +22,27 @@ import("${chip_root}/src/app/common_flags.gni")
 import("${chip_root}/build/chip/buildconfig_header.gni")
 
 static_library("chip_webrtc") {
-      sources = [
-            "libwebrtc.cpp",
-            "libwebrtc.h",
-      ]
-      cflags_cc = ["-Wno-shadow", "-Wno-deprecated-copy", "-Wno-return-type", "-Wno-unknown-pragmas"] 
+  sources = [
+    "libwebrtc.cpp",
+    "libwebrtc.h",
+  ]
+  cflags_cc = [
+    "-Wno-shadow",
+    "-Wno-deprecated-copy",
+    "-Wno-return-type",
+    "-Wno-unknown-pragmas",
+  ]
 
-      include_dirs = [
-          "${chip_root}/src/controller/webrtc/",
-          "${chip_root}/third_party/libdatachannel/repo/include",
-      ]
+  include_dirs = [
+    "${chip_root}/src/controller/webrtc/",
+    "${chip_root}/third_party/libdatachannel/repo/include",
+  ]
 
-      deps = [
-         "${chip_root}/third_party/libdatachannel:libdatachannel",
-      ]
-#     libs = ["${chip_root}/third_party/libdatachannel/repo/build/libdatachannel.so", ]
+  deps = [ "${chip_root}/third_party/libdatachannel:libdatachannel" ]
 
-      libs = [ "datachannel" ]
-      lib_dirs = [ rebase_path("${chip_root}/third_party/libdatachannel/repo/build/") ]
+  #     libs = ["${chip_root}/third_party/libdatachannel/repo/build/libdatachannel.so", ]
+
+  libs = [ "datachannel" ]
+  lib_dirs =
+      [ rebase_path("${chip_root}/third_party/libdatachannel/repo/build/") ]
 }
