--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -21,6 +21,7 @@ import("${chip_root}/src/app/common_flags.gni")
 
 import("${chip_root}/build/chip/buildconfig_header.gni")
 
+if (current_os == "linux" && current_cpu == "x64") {
 static_library("chip_webrtc") {
   sources = [
     "libwebrtc.cpp",
@@ -40,9 +41,8 @@ static_library("chip_webrtc") {
 
   deps = [ "${chip_root}/third_party/libdatachannel:libdatachannel" ]
 
-  #     libs = ["${chip_root}/third_party/libdatachannel/repo/build/libdatachannel.so", ]
-
-  libs = [ "datachannel" ]
+  libs = [ "${chip_root}/third_party/libdatachannel/repo/build/libdatachannel.so" ]
   lib_dirs =
       [ rebase_path("${chip_root}/third_party/libdatachannel/repo/build/") ]
+}
 }
