--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -21,30 +21,29 @@ import("${chip_root}/src/app/common_flags.gni")
 
 import("${chip_root}/build/chip/buildconfig_header.gni")
 
-if (current_os == "linux" && current_cpu == "x64") {
-  static_library("chip_webrtc") {
-    sources = [
-      "libwebrtc.cpp",
-      "libwebrtc.h",
-    ]
-    cflags_cc = [
-      "-Wno-shadow",
-      "-Wno-deprecated-copy",
-      "-Wno-return-type",
-      "-Wno-unknown-pragmas",
-    ]
+static_library("chip_webrtc") {
+  sources = [
+    "WebRTC.cpp",
+    "WebRTC.h",
+  ]
+  cflags_cc = [
+    "-Wno-shadow",
+    "-Wno-deprecated-copy",
+    "-Wno-return-type",
+    "-Wno-unknown-pragmas",
+  ]
 
-    include_dirs = [
-      "${chip_root}/src/controller/webrtc/",
-      "${chip_root}/third_party/libdatachannel/repo/include",
-    ]
+  include_dirs = [
+    "${chip_root}/src/controller/webrtc/",
+    "${chip_root}/src/lib/support",
+    "${chip_root}/third_party/libdatachannel/repo/include",
+  ]
 
-    deps = [ "${chip_root}/third_party/libdatachannel:libdatachannel" ]
+  deps = [ "${chip_root}/third_party/libdatachannel:libdatachannel", "${chip_root}/src/lib/support", ]
 
-    libs = [
-      "${chip_root}/third_party/libdatachannel/repo/build/libdatachannel.so",
-    ]
-    lib_dirs =
-        [ rebase_path("${chip_root}/third_party/libdatachannel/repo/build/") ]
-  }
+  lib_dirs = [ rebase_path("${chip_root}/third_party/libdatachannel/repo/build/") ]
+
+  libs = [
+    "${chip_root}/third_party/libdatachannel/repo/build/libdatachannel.so",
+  ]
 }
