--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -41,9 +41,5 @@ static_library("chip_webrtc") {
 
   deps = [ "${chip_root}/third_party/libdatachannel:libdatachannel", "${chip_root}/src/lib/support", ]
 
-  lib_dirs = [ rebase_path("${chip_root}/third_party/libdatachannel/repo/build/") ]
-
-  libs = [
-    "${chip_root}/third_party/libdatachannel/repo/build/libdatachannel.so",
-  ]
+  libs = ["ssl", "crypto",]
 }
