[Senscomm] Build wise-sdk
New features:

- Include wise-sdk inside third_party as a submodule.
- Support building flashable binary image for example apps such as
  lighting-app.

Changes:

Fixes:

Issues:

- Resolves Senscomm/wise#2812

--- a/.gitmodules
+++ b/.gitmodules
@@ -329,4 +329,7 @@
 	url = https://github.com/Infineon/optiga-trust-m.git
 	branch = matter_support
 	platforms = infineon
-
+[submodule "third_party/senscomm/scm1612s/wise-sdk"]
+	path = third_party/senscomm/scm1612s/wise-sdk
+	url = git@github.com:Senscomm/wise-sdk.git
+	platforms = senscomm
