--- a/src/platform/device.gni
+++ b/src/platform/device.gni
@@ -71,7 +71,7 @@ declare_args() {
       chip_device_platform == "webos" || chip_device_platform == "cc32xx" ||
       chip_device_platform == "bl602" || chip_device_platform == "mw320" ||
       chip_device_platform == "beken" || chip_device_platform == "mt793x" ||
-      chip_device_platform == "asr" ||
+      chip_device_platform == "scm1612s" || chip_device_platform == "asr" ||
       (chip_device_platform == "darwin" && current_os == "mac")
 
   # Enable ble support.
@@ -93,7 +93,8 @@ declare_args() {
       chip_device_platform == "ameba" || chip_device_platform == "webos" ||
       chip_device_platform == "cc32xx" || chip_device_platform == "mw320" ||
       chip_device_platform == "beken" || chip_device_platform == "mt793x" ||
-      chip_device_platform == "asr" || chip_device_platform == "openiotsdk") {
+      chip_device_platform == "asr" || chip_device_platform == "openiotsdk" ||
+      chip_device_platform == "scm1612s") {
     chip_mdns = "minimal"
   } else if (chip_device_platform == "darwin" ||
              chip_device_platform == "cc13x2_26x2" ||
@@ -167,6 +168,8 @@ if (chip_device_platform == "cc13x2_26x2") {
   _chip_device_layer = "mbed"
 } else if (chip_device_platform == "psoc6") {
   _chip_device_layer = "Infineon/PSOC6"
+} else if (chip_device_platform == "scm1612s") {
+  _chip_device_layer = "senscomm/scm1612s"
 } else if (chip_device_platform == "android") {
   _chip_device_layer = "android"
 } else if (chip_device_platform == "ameba") {
@@ -266,5 +269,5 @@ assert(
         chip_device_platform == "bl702l" || chip_device_platform == "mt793x" ||
         chip_device_platform == "SiWx917" ||
         chip_device_platform == "openiotsdk" || chip_device_platform == "asr" ||
-        chip_device_platform == "stm32",
+        chip_device_platform == "stm32" || chip_device_platform == "scm1612s",
     "Please select a valid value for chip_device_platform")
