--- a/src/system/BUILD.gn
+++ b/src/system/BUILD.gn
@@ -66,6 +66,8 @@ if (chip_device_platform == "cc13x2_26x2") {
   import("//build_overrides/cyw30739_sdk.gni")
 } else if (chip_device_platform == "mt793x") {
   import("//build_overrides/mt793x_sdk.gni")
+} else if (chip_device_platform == "scm1612s") {
+  import("//build_overrides/scm1612s.gni")
 } else if (chip_device_platform == "stm32") {
   import("//build_overrides/stm32_sdk.gni")
 } else if (chip_device_platform == "bl702") {
@@ -197,7 +199,6 @@ source_set("system_config_header") {
       if (chip_device_platform == "bl702l") {
         public_deps += [ "${bouffalolab_iot_sdk_build_root}/bl702l:bl_iot_sdk" ]
       }
-
       # Add platform here as needed.
     }
   }
