--- a/src/platform/silabs/efr32/BUILD.gn
+++ b/src/platform/silabs/efr32/BUILD.gn
@@ -61,9 +61,6 @@ static_library("efr32") {
     "${silabs_platform_dir}/SilabsConfig.cpp",
     "${silabs_platform_dir}/SilabsConfig.h",
     "${silabs_platform_dir}/SystemPlatformConfig.h",
-    "${silabs_platform_dir}/platformAbstraction/GsdkSpam.cpp",
-    "${silabs_platform_dir}/platformAbstraction/SilabsPlatform.h",
-    "${silabs_platform_dir}/platformAbstraction/SilabsPlatformBase.h",
     "../../FreeRTOS/SystemTimeSupport.cpp",
     "../../SingletonConfigurationManager.cpp",
   ]
@@ -78,49 +75,11 @@ static_library("efr32") {
   } else {
     sources += [ "BLEManagerImpl.cpp" ]
   }
-  if (chip_enable_multi_ota_requestor) {
-    if (chip_enable_multi_ota_encryption) {
-      sources += [
-        "${silabs_platform_dir}/multi-ota/OtaTlvEncryptionKey.cpp",
-        "${silabs_platform_dir}/multi-ota/OtaTlvEncryptionKey.h",
-      ]
-    }
-
-    if (chip_enable_ota_custom_tlv_testing) {
-      sources += [
-        "${silabs_platform_dir}/multi-ota/OTACustomProcessor.cpp",
-        "${silabs_platform_dir}/multi-ota/OTACustomProcessor.h",
-      ]
-    }
-    sources += [
-      "${silabs_platform_dir}/multi-ota/OTAFactoryDataProcessor.cpp",
-      "${silabs_platform_dir}/multi-ota/OTAFactoryDataProcessor.h",
-      "${silabs_platform_dir}/multi-ota/OTAFirmwareProcessor.cpp",
-      "${silabs_platform_dir}/multi-ota/OTAFirmwareProcessor.h",
-      "${silabs_platform_dir}/multi-ota/OTAHooks.cpp",
-      "${silabs_platform_dir}/multi-ota/OTAMultiImageProcessorImpl.cpp",
-      "${silabs_platform_dir}/multi-ota/OTAMultiImageProcessorImpl.h",
-      "${silabs_platform_dir}/multi-ota/OTATlvProcessor.cpp",
-      "${silabs_platform_dir}/multi-ota/OTATlvProcessor.h",
-    ]
-
-    #  OTA processor for SiWx917 family
-    if (chip_enable_wifi && use_SiWx917) {
-      sources += [
-        "${silabs_platform_dir}/multi-ota/SiWx917/OTAWiFiFirmwareProcessor.cpp",
-        "${silabs_platform_dir}/multi-ota/SiWx917/OTAWiFiFirmwareProcessor.h",
-      ]
-    }
-  } else if (chip_enable_ota_requestor) {
-    sources += [
-      "${silabs_platform_dir}/OTAImageProcessorImpl.h",
-      "OTAImageProcessorImpl.cpp",
-    ]
-  }
 
   public_deps = [
     "${chip_root}/src/platform:platform_base",
     "${chip_root}/src/platform/logging:headers",
+    "../platformAbstraction:platform-abstraction",
   ]
   deps = [
     "${chip_root}/src/app/common:ids",
@@ -177,5 +136,14 @@ static_library("efr32") {
     ]
 
     public_deps += [ "${silabs_platform_dir}/wifi:wifi-platform" ]
+  }
+
+  if (chip_enable_multi_ota_requestor) {
+    public_deps += [ "${silabs_platform_dir}/multi-ota:multi-ota" ]
+  } else if (chip_enable_ota_requestor) {
+    sources += [
+      "${silabs_platform_dir}/OTAImageProcessorImpl.h",
+      "OTAImageProcessorImpl.cpp",
+    ]
   }
 }
