--- a/examples/lit-icd-app/silabs/BUILD.gn
+++ b/examples/lit-icd-app/silabs/BUILD.gn
@@ -130,9 +130,15 @@ silabs_executable("lit_icd_app") {
   ]
 
   if (wifi_soc) {
-    deps += [ "${examples_plat_dir}:siwx917-common" ]
+    deps += [
+      "${chip_root}/src/platform/silabs/platformAbstraction:wisemcu",
+      "${examples_plat_dir}:siwx917-common",
+    ]
   } else {
-    deps += [ "${examples_plat_dir}:efr32-common" ]
+    deps += [
+      "${chip_root}/src/platform/silabs/platformAbstraction:gsdk",
+      "${examples_plat_dir}:efr32-common",
+    ]
   }
 
   if (chip_build_libshell) {
