--- a/examples/lock-app/silabs/BUILD.gn
+++ b/examples/lock-app/silabs/BUILD.gn
@@ -133,9 +133,15 @@ silabs_executable("lock_app") {
   ]
 
   if (wifi_soc) {
-    deps += [ "${examples_plat_dir}:siwx917-common" ]
+    deps += [
+      "${chip_root}/src/platform/silabs/platformAbstraction:wisemcu",
+      "${examples_plat_dir}:siwx917-common",
+    ]
   } else {
-    deps += [ "${examples_plat_dir}:efr32-common" ]
+    deps += [
+      "${chip_root}/src/platform/silabs/platformAbstraction:gsdk",
+      "${examples_plat_dir}:efr32-common",
+    ]
   }
 
   if (chip_enable_pw_rpc) {
