Restored examples BUILD.gn changes as it is not required

--- a/examples/refrigerator-app/silabs/BUILD.gn
+++ b/examples/refrigerator-app/silabs/BUILD.gn
@@ -168,15 +168,9 @@ silabs_executable("refrigerator_app") {
   ]
 
   if (wifi_soc) {
-    deps += [
-      "${chip_root}/src/platform/silabs/platformAbstraction:wisemcu",
-      "${examples_plat_dir}:siwx917-common",
-    ]
+    deps += [ "${examples_plat_dir}:siwx917-common" ]
   } else {
-    deps += [
-      "${chip_root}/src/platform/silabs/platformAbstraction:gsdk",
-      "${examples_plat_dir}:efr32-common",
-    ]
+    deps += [ "${examples_plat_dir}:efr32-common" ]
   }
 
   if (chip_enable_pw_rpc) {
