--- a/examples/window-app/silabs/BUILD.gn
+++ b/examples/window-app/silabs/BUILD.gn
@@ -131,15 +131,9 @@ silabs_executable("window_app") {
   ]
 
   if (wifi_soc) {
-    deps += [
-      "${chip_root}/src/platform/silabs/platformAbstraction:wisemcu",
-      "${examples_plat_dir}:siwx917-common",
-    ]
+    deps += [ "${examples_plat_dir}:siwx917-common" ]
   } else {
-    deps += [
-      "${chip_root}/src/platform/silabs/platformAbstraction:gsdk",
-      "${examples_plat_dir}:efr32-common",
-    ]
+    deps += [ "${examples_plat_dir}:efr32-common" ]
   }
 
   ldscript = "${examples_common_plat_dir}/ldscripts/${silabs_family}.ld"
