--- a/src/app/clusters/tls-client-management-server/app_config_dependent_sources.gni
+++ b/src/app/clusters/tls-client-management-server/app_config_dependent_sources.gni
@@ -11,7 +11,11 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+import("//build_overrides/chip.gni")
+
 app_config_dependent_sources = [
+  "${chip_root}/src/app/clusters/tls-certificate-management-server/CertificateTableImpl.cpp",
+  "${chip_root}/src/app/clusters/tls-certificate-management-server/CertificateTableImpl.h",
   "tls-client-management-server.cpp",
   "tls-client-management-server.h",
 ]
