--- a/src/platform/android/BUILD.gn
+++ b/src/platform/android/BUILD.gn
@@ -129,6 +129,7 @@ android_library("java") {
     "java/chip/platform/DiagnosticDataProvider.java",
     "java/chip/platform/DiagnosticDataProviderImpl.java",
     "java/chip/platform/KeyValueStoreManager.java",
+    "java/chip/platform/NamedThreadFactory.java",
     "java/chip/platform/NetworkInterface.java",
     "java/chip/platform/NfcCallback.java",
     "java/chip/platform/NfcCommissioningManager.java",
