--- a/examples/energy-gateway-app/linux/BUILD.gn
+++ b/examples/energy-gateway-app/linux/BUILD.gn
@@ -37,6 +37,9 @@ executable("chip-energy-gateway-app") {
     "${chip_root}/examples/energy-gateway-app/commodity-price/src/CommodityPriceDelegate.cpp",
     "${chip_root}/examples/energy-gateway-app/commodity-price/src/CommodityPriceEventTriggers.cpp",
     "${chip_root}/examples/energy-gateway-app/commodity-price/src/CommodityPriceMain.cpp",
+    "${chip_root}/examples/energy-gateway-app/commodity-tariff/src/CommodityTariffEventTriggers.cpp",
+    "${chip_root}/examples/energy-gateway-app/commodity-tariff/src/CommodityTariffInstance.cpp",
+    "${chip_root}/examples/energy-gateway-app/commodity-tariff/src/CommodityTariffMain.cpp",
     "${chip_root}/examples/energy-gateway-app/common/src/EnergyGatewayAppCommonMain.cpp",
     "${chip_root}/examples/energy-gateway-app/electrical-grid-conditions/src/ElectricalGridConditionsDelegate.cpp",
     "${chip_root}/examples/energy-gateway-app/electrical-grid-conditions/src/ElectricalGridConditionsEventTriggers.cpp",
@@ -66,6 +69,9 @@ executable("chip-energy-gateway-app") {
     "${chip_root}/examples/energy-management-app/energy-management-common/common/include",
     "${chip_root}/examples/energy-gateway-app/commodity-price/include",
     "${chip_root}/examples/energy-gateway-app/electrical-grid-conditions/include",
+    "${chip_root}/examples/energy-gateway-app/meter-identification/include",
+    "${chip_root}/examples/energy-gateway-app/commodity-tariff/include",
+    "${chip_root}/examples/energy-gateway-app/common/include",
     "${chip_root}/examples/all-clusters-app/all-clusters-common/include",
   ]
 
