--- a/src/controller/BUILD.gn
+++ b/src/controller/BUILD.gn
@@ -118,7 +118,7 @@ static_library("controller") {
   ]
 
   cflags = [ "-Wconversion" ]
-  if (current_os == "linux") {
+  if (chip_support_webrtc_python_bindings && current_os == "linux") {
     public_deps += [ "${chip_root}/src/controller/webrtc:chip_webrtc" ]
   }
 
