--- a/src/controller/python/BUILD.gn
+++ b/src/controller/python/BUILD.gn
@@ -93,7 +93,8 @@ shared_library("ChipDeviceCtrl") {
       "chip/tracing/TracingSetup.cpp",
       "chip/utils/DeviceProxyUtils.cpp",
     ]
-    if (current_os == "linux" && current_cpu == "x64") {
+    if (chip_support_webrtc_python_bindings && current_os == "linux" &&
+        current_cpu == "x64") {
       sources += [ "chip/webrtc/RTCClient.cpp" ]
     }
     defines += [ "CHIP_CONFIG_MAX_GROUPS_PER_FABRIC=50" ]
@@ -280,9 +281,9 @@ chip_python_wheel_action("chip-core") {
     "chip.storage",
     "chip.tracing",
     "chip.fault_injection",
-    "chip.webrtc",
   ]
-  if (current_os == "linux" && current_cpu == "x64") {
+  if (chip_support_webrtc_python_bindings && current_os == "linux" &&
+      current_cpu == "x64") {
     py_packages += [ "chip.webrtc" ]
   }
 
