Create a NetworkCommissioningDriver delegate

--- a/src/app/clusters/network-commissioning/BUILD.gn
+++ b/src/app/clusters/network-commissioning/BUILD.gn
@@ -51,6 +51,7 @@ source_set("network-commissioning") {
   sources = [
     "NetworkCommissioningCluster.cpp",
     "NetworkCommissioningCluster.h",
+    "NetworkCommissioningDriverDelegate.h",
     "NetworkCommissioningLogic.cpp",
     "NetworkCommissioningLogic.h",
   ]
