Use the NetworkCommissioningDriver delegate for Silabs Thread platform still leveraging the GenericThreadDriver implementation. Adapt Silabs NetWorCommissioningWifiDriver to leverage NetworkCommissioningDriver delegate in the same way

--- a/examples/platform/silabs/SiWx917/BUILD.gn
+++ b/examples/platform/silabs/SiWx917/BUILD.gn
@@ -96,6 +96,7 @@ config("siwx917-common-config") {
 
 source_set("siwx917-common") {
   deps = [
+    "${chip_root}/src/app/clusters/network-commissioning:network-commissioning",
     "${chip_root}/src/app/clusters/software-diagnostics-server:software-fault-listener",
     "${silabs_common_plat_dir}/provision:storage",
   ]
