Support P256KeyPair based on Trusty OS
i.MX8M supports Trusty OS. This patch move the p256keypair operations
to Trusty OS to enhance the crypto security.

Change-Id: I71a838c65ab2db92bc3d4f3aceb755090cbea70d
Signed-off-by: maximus <maximus.sun@nxp.com>

--- a/src/crypto/BUILD.gn
+++ b/src/crypto/BUILD.gn
@@ -73,6 +73,7 @@ buildconfig_header("crypto_buildconfig") {
     "CHIP_CRYPTO_OPENSSL=${chip_crypto_openssl}",
     "CHIP_CRYPTO_BORINGSSL=${chip_crypto_boringssl}",
     "CHIP_CRYPTO_PLATFORM=${chip_crypto_platform}",
+    "CHIP_CRYPTO_TRUSTY_OS=${chip_with_trusty_os}",
   ]
 }
 
@@ -92,6 +93,10 @@ source_set("public_headers") {
     "${chip_root}/src/lib/support",
     "${nlassert_root}:nlassert",
   ]
+
+  if (chip_with_trusty_os) {
+    public_deps += [ "${chip_root}/third_party/libtrustymatter" ]
+  }
 }
 
 if (chip_crypto == "openssl") {
@@ -105,8 +110,14 @@ if (chip_crypto == "openssl") {
     sources = [
       "CHIPCryptoPALOpenSSL.cpp",
       "CHIPCryptoPALOpenSSL.h",
-      "P256KeyPair_Openssl.cpp",
     ]
+
+    if (chip_with_trusty_os) {
+      sources += [ "P256KeyPair_TrustyImpl.cpp" ]
+    } else {
+      sources += [ "P256KeyPair_Openssl.cpp" ]
+    }
+
     public_configs = [ ":openssl_config" ]
     public_deps = [ ":public_headers" ]
   }
@@ -118,8 +129,14 @@ if (chip_crypto == "openssl") {
     sources = [
       "CHIPCryptoPALOpenSSL.cpp",
       "CHIPCryptoPALOpenSSL.h",
-      "P256KeyPair_Openssl.cpp",
     ]
+
+    if (chip_with_trusty_os) {
+      sources += [ "P256KeyPair_TrustyImpl.cpp" ]
+    } else {
+      sources += [ "P256KeyPair_Openssl.cpp" ]
+    }
+
     public_deps = [
       ":public_headers",
       "${boringssl_root}:boringssl",
