--- a/integrations/docker/images/stage-2/chip-build-tizen/Dockerfile
+++ b/integrations/docker/images/stage-2/chip-build-tizen/Dockerfile
@@ -20,7 +20,7 @@ RUN set -x \
 
 # ------------------------------------------------------------------------------
 # Install tizen
-ENV TIZEN_VERSION=8.0
+ENV TIZEN_VERSION=9.0
 ENV TIZEN_SDK_ROOT=/opt/tizen-sdk
 
 COPY tizen-sdk-installer $TIZEN_SDK_ROOT/files/installer
@@ -30,6 +30,8 @@ RUN set -x \
     --tizen-sdk-path $TIZEN_SDK_ROOT \
     --tizen-sdk-data-path /home/ubuntu/tizen-sdk-data \
     --tizen-version $TIZEN_VERSION  \
+    --fetch-sdk-pkgs \
+    --install-sdk-pkgs \
     --override-secret-tool \
     && : # last line
 
