[TI]Add the NetworkCommissioningDriverDelegate instantiation for the GenericThreadDriver
Add needed dependency to ti apps

--- a/examples/lighting-app/ti/cc13x4_26x4/BUILD.gn
+++ b/examples/lighting-app/ti/cc13x4_26x4/BUILD.gn
@@ -94,6 +94,7 @@ ti_simplelink_executable("lighting_app") {
     ":sysconfig",
     "${chip_root}/examples/lighting-app/lighting-common",
     "${chip_root}/examples/platform/ti/cc13x4_26x4:ti-attestation-credentials",
+    "${chip_root}/src/app/clusters/network-commissioning:network-commissioning",
     "${chip_root}/src/lib",
     "${chip_root}/src/platform/logging:default",
     "${chip_root}/third_party/openthread:openthread",
