[Tizen] Add crashlog to QEMU workflow (#39440)
* [Tizen] Add crashlog to QEMU workflow

* Add script

* Restyled by whitespace

* Restyled by shellharden

* Bump

* Bump

* Fix typo

* Fix

---------

Co-authored-by: Restyled.io <commits@restyled.io>

--- a/.github/workflows/qemu.yaml
+++ b/.github/workflows/qemu.yaml
@@ -98,4 +98,5 @@ jobs:
                     "./scripts/build/build_examples.py \
                         --target tizen-arm-tests-no-ble-no-thread \
                         build
-                    "
+                    " \
+                || { ./scripts/helpers/tizen-crashlog.sh; exit 1; }
