--- a/examples/temperature-measurement-app/esp32/main/CMakeLists.txt
+++ b/examples/temperature-measurement-app/esp32/main/CMakeLists.txt
@@ -56,8 +56,7 @@ set(SRC_DIRS_LIST  "${SRC_DIRS_LIST}"
 endif (CONFIG_ENABLE_PW_RPC)
 
 idf_component_register(PRIV_INCLUDE_DIRS ${PRIV_INCLUDE_DIRS_LIST}
-                       SRC_DIRS ${SRC_DIRS_LIST}
-                       EMBED_FILES diagnostic_logs/end_user_support.log diagnostic_logs/network_diag.log)
+                       SRC_DIRS ${SRC_DIRS_LIST})
 
 include(${CHIP_ROOT}/src/app/chip_data_model.cmake)
 chip_configure_data_model(${COMPONENT_LIB}
