--- a/examples/lock-app/silabs/BUILD.gn
+++ b/examples/lock-app/silabs/BUILD.gn
@@ -119,6 +119,7 @@ silabs_executable("lock_app") {
     "${examples_common_plat_dir}/main.cpp",
     "src/AppTask.cpp",
     "src/LockManager.cpp",
+    "src/LockMigration.cpp",
     "src/ZclCallbacks.cpp",
   ]
 
