--- a/src/app/tests/suites/certification/PICS.yaml
+++ b/src/app/tests/suites/certification/PICS.yaml
@@ -10313,3 +10313,32 @@ PICS:
           "Does the device implement the Wi-Fi Network Management cluster as a
           server"
       id: WIFINM.S
+
+    #
+    # Meter Identification
+    #
+    - label:
+          "Does the device implement the Meter Identification Cluster as a
+          server?"
+      id: MTRID.S
+
+    #  Features
+    - label:
+          "Does the device supports information about Power Threshold feature?"
+      id: MTRID.S.F00
+
+    # Server attributes
+    - label: "Does the device implement the MeterType attribute?"
+      id: MTRID.S.A0000
+
+    - label: "Does the device implement the PointOfDelivery attribute?"
+      id: MTRID.S.A0001
+
+    - label: "Does the device implement the MeterSerialNumber attribute?"
+      id: MTRID.S.A0002
+
+    - label: "Does the device implement the ProtocolVersion attribute?"
+      id: MTRID.S.A0003
+
+    - label: "Does the device implement the PowerThreshold attribute?"
+      id: MTRID.S.A0004
