[TI] LWIP removal for cc13x4_26x4 (#39569)
* lwip removal for cc13x4_26x4

* Restyled by whitespace

* Restyled by clang-format

* Restyled by prettier-markdown

* remove LWIP friend class

* re-enable logging in pump-controller app

* Restyled by gn

---------

Co-authored-by: Restyled.io <commits@restyled.io>

--- a/examples/lighting-app/ti/cc13x4_26x4/args.gni
+++ b/examples/lighting-app/ti/cc13x4_26x4/args.gni
@@ -36,6 +36,12 @@ chip_enable_ota_requestor = true
 
 chip_openthread_ftd = true
 
+#NOTE: LwIP is no longer supported, these options must stay the same
+chip_system_config_use_openthread_inet_endpoints = true
+chip_with_lwip = false
+chip_enable_openthread = true
+chip_inet_config_enable_tcp_endpoint = false
+
 ot_ti_lib_dir = ""
 openthread_external_platform =
     "${chip_root}/third_party/openthread/platforms/ti:libopenthread-ti"
