--- a/examples/pump-controller-app/ti/cc13x4_26x4/args.gni
+++ b/examples/pump-controller-app/ti/cc13x4_26x4/args.gni
@@ -45,10 +45,16 @@ chip_openthread_target =
 
 chip_openthread_ftd = true
 
-# Disable CHIP Logging
-#chip_progress_logging = false
-#chip_detail_logging = false
-#chip_automation_logging = false
+#NOTE: LwIP is no longer supported, these options must stay the same
+chip_system_config_use_openthread_inet_endpoints = true
+chip_with_lwip = false
+chip_enable_openthread = true
+chip_inet_config_enable_tcp_endpoint = false
+
+#Enable logging
+chip_progress_logging = true
+chip_detail_logging = true
+chip_automation_logging = true
 
 # BLE options
 chip_config_network_layer_ble = true
