--- a/src/system/BUILD.gn
+++ b/src/system/BUILD.gn
@@ -202,6 +202,9 @@ source_set("system_config_header") {
         public_deps +=
             [ "${bouffalolab_iot_sdk_build_root}/bl616:bouffalo_sdk" ]
       }
+      if (chip_device_platform == "cc13x4_26x4") {
+        public_deps += [ "${ti_simplelink_sdk_build_root}:ti_simplelink_sdk" ]
+      }
 
       # Add platform here as needed.
     }
