--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -537,6 +537,8 @@ jobs:
                       --target linux-x64-light-data-model-no-unique-id-${BUILD_VARIANT}-clang \
                       --target linux-x64-terms-and-conditions \
                       --target linux-x64-python-bindings \
+                      --target linux-x64-jf-control-app \
+                      --target linux-x64-jf-admin-app \
                       build \
                       --copy-artifacts-to objdir-clone \
                    "
@@ -563,6 +565,8 @@ jobs:
                   echo "TRACE_APP: out/trace_data/app-{SCRIPT_BASE_NAME}" >> /tmp/test_env.yaml
                   echo "TRACE_TEST_JSON: out/trace_data/test-{SCRIPT_BASE_NAME}" >> /tmp/test_env.yaml
                   echo "TRACE_TEST_PERFETTO: out/trace_data/test-{SCRIPT_BASE_NAME}" >> /tmp/test_env.yaml
+                  echo "JF_ADMIN_APP: out/linux-x64-jf-admin-app/jfa-app" >> /tmp/test_env.yaml
+                  echo "JF_CONTROL_APP: out/linux-x64-jf-control-app/jfc-app" >> /tmp/test_env.yaml
 
             - name: Verify Testing Support
               run: |
