--- a/examples/camera-app/camera-common/BUILD.gn
+++ b/examples/camera-app/camera-common/BUILD.gn
@@ -29,16 +29,24 @@ source_set("camera-lib") {
 
   sources = [
     "include/camera-app.h",
+    "include/camera-avsettingsuserlevel-controller/camera-avsettingsuserlevel-controller.h",
+    "include/camera-avstream-controller/camera-avstream-controller.h",
     "include/camera-device-interface.h",
+    "include/chime-controller/chime-controller.h",
     "include/media-controller/media-controller.h",
     "include/transport/transport.h",
+    "include/webrtc-provider-controller/webrtc-provider-controller.h",
     "src/camera-app.cpp",
   ]
 
   include_dirs = [
     "include",
+    "include/camera-avsettingsuserlevel-controller",
+    "include/camera-avstream-controller",
+    "include/chime-controller",
     "include/media-controller",
     "include/transport",
+    "include/webrtc-provider-controller",
   ]
 
   deps = [
