--- a/src/data-model-providers/codegen/tests/BUILD.gn
+++ b/src/data-model-providers/codegen/tests/BUILD.gn
@@ -54,6 +54,7 @@ chip_test_suite("tests") {
   test_sources = [
     "TestCodegenModelViaMocks.cpp",
     "TestEmberAttributeDataBuffer.cpp",
+    "TestEmberAttributeStorageImpl.cpp",
     "TestServerClusterInterfaceRegistry.cpp",
   ]
 
