--- a/examples/lighting-app/ti/cc13x4_26x4/BUILD.gn
+++ b/examples/lighting-app/ti/cc13x4_26x4/BUILD.gn
@@ -16,6 +16,7 @@ import("//build_overrides/build.gni")
 import("//build_overrides/chip.gni")
 import("//build_overrides/openthread.gni")
 import("//build_overrides/ti_simplelink_sdk.gni")
+import("${chip_root}/src/lib/lib.gni")
 
 import("${build_root}/config/defaults.gni")
 
@@ -38,13 +39,11 @@ ti_sysconfig("sysconfig") {
     sources =
         [ "${chip_root}/examples/platform/ti/sysconfig/chip_cc2674p10.syscfg" ]
   } else if (ti_simplelink_board == "LP_EM_CC1354P10_6") {
-    sources = [
-      "${chip_root}/examples/platform/ti/sysconfig/chip_cc1354p10_6.syscfg",
-    ]
+    sources = 
+      [ "${chip_root}/examples/platform/ti/sysconfig/chip_cc1354p10_6.syscfg" ]
   } else if (ti_simplelink_board == "LP_EM_CC1354P10_1") {
-    sources = [
-      "${chip_root}/examples/platform/ti/sysconfig/chip_cc1354p10_1.syscfg",
-    ]
+    sources = 
+      [ "${chip_root}/examples/platform/ti/sysconfig/chip_cc1354p10_1.syscfg" ]
   } else if (ti_simplelink_board == "CC2674R10") {
     sources =
         [ "${chip_root}/examples/platform/ti/sysconfig/chip_cc2674r10.syscfg" ]
@@ -66,6 +65,10 @@ ti_sysconfig("sysconfig") {
     #"ti_devices_config.c",
     #"ti_devices_config.h",
   ]
+
+  if (silk_logging_enabled) {
+    outputs += [ "ti_log_config.c" ]
+  }
 
   public_configs = [ ":sdk_cc13x4_26x4_dmm_config" ]
 
@@ -107,6 +110,20 @@ ti_simplelink_executable("lighting_app") {
   if (chip_enable_icd_server) {
     defines += [ "TI_ICD_ENABLE_SERVER" ]
   }
+
+  if (chip_build_libshell) {
+    deps += [
+      "${chip_root}/examples/shell/shell_common:shell_common",
+      "${chip_root}/src/lib/shell:shell",
+      "${chip_root}/src/lib/shell:shell_core",
+    ]
+
+    defines += [
+      "ENABLE_CHIP_SHELL",
+      "CHIP_DEVICE_CONFIG_THREAD_ENABLE_CLI=1",
+    ]
+  }
+
 
   include_dirs = [
     "${project_dir}",
