--- a/src/app/tests/suites/certification/Test_TC_TBRM_2_3.yaml
+++ b/src/app/tests/suites/certification/Test_TC_TBRM_2_3.yaml
@@ -84,6 +84,7 @@ tests:
     - label: "TH sends a valid ActiveDatasetRequest command to the DUT"
       runIf: noActiveDataset
       command: SetActiveDatasetRequest
+      timedInteractionTimeoutMs: 2000
       arguments:
           values:
               - name: ActiveDataset
@@ -105,9 +106,21 @@ tests:
           constraints:
               type: int64u
 
+    - label:
+          "TH sends a SetPendingDatasetRequest command to the DUT without a
+          timed interaction"
+      command: SetPendingDatasetRequest
+      arguments:
+          values:
+              - name: PendingDataset
+                value: PIXIT.TBRM.THREAD_PENDING_DATASET
+      response:
+          error: NEEDS_TIMED_INTERACTION
+
     # Step 6
     - label: "TH sends a SetPendingDatasetRequest command to the DUT"
       command: SetPendingDatasetRequest
+      timedInteractionTimeoutMs: 2000
       arguments:
           values:
               - name: PendingDataset
