--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -25,6 +25,8 @@ static_library("chip_webrtc") {
   sources = [
     "WebRTC.cpp",
     "WebRTC.h",
+    "WebRTCClient.cpp",
+    "WebRTCClient.h",
   ]
   cflags_cc = [
     "-Wno-shadow",
