Export for JFA and JFC were inversed

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -543,6 +543,9 @@ jobs:
                       --copy-artifacts-to objdir-clone \
                    "
             - name: Generate an argument environment file
+              # GitHub VM remains out of memory after adding Joint Fabrics example apps to be built.
+              # Add as a temporary fix the removal of out/ folders for JF apps and use artifacts from objdir-clone (see step above) as .o files are no longer requred.
+              # Maybe do this for all apps. 
               run: |
                   echo -n "" >/tmp/test_env.yaml
                   echo "ALL_CLUSTERS_APP: out/linux-x64-all-clusters-${BUILD_VARIANT}-tsan-clang-test/chip-all-clusters-app" >> /tmp/test_env.yaml
@@ -565,9 +568,9 @@ jobs:
                   echo "TRACE_APP: out/trace_data/app-{SCRIPT_BASE_NAME}" >> /tmp/test_env.yaml
                   echo "TRACE_TEST_JSON: out/trace_data/test-{SCRIPT_BASE_NAME}" >> /tmp/test_env.yaml
                   echo "TRACE_TEST_PERFETTO: out/trace_data/test-{SCRIPT_BASE_NAME}" >> /tmp/test_env.yaml
-                  echo "JF_ADMIN_APP: objdir-clone/linux-x64-jf-control-app/jfa-app" >> /tmp/test_env.yaml
+                  echo "JF_CONTROL_APP: objdir-clone/linux-x64-jf-control-app/jfa-app" >> /tmp/test_env.yaml
                   rm -rf out/linux-x64-jf-control-app
-                  echo "JF_CONTROL_APP: objdir-clone/linux-x64-jf-admin-app/jfc-app" >> /tmp/test_env.yaml
+                  echo "JF_ADMIN_APP: objdir-clone/linux-x64-jf-admin-app/jfc-app" >> /tmp/test_env.yaml
                   rm -rf out/linux-x64-jf-admin-app
 
             - name: Verify Testing Support
