--- a/src/app/tests/suites/certification/Test_TC_TBRM_2_3.yaml
+++ b/src/app/tests/suites/certification/Test_TC_TBRM_2_3.yaml
@@ -108,6 +108,7 @@ tests:
               type: int64u
 
     # Step 6
+    # Note: Unsupported with darwin-framework-tool because it automatically performs a timed invoke
     - label:
           "TH sends a SetPendingDatasetRequest command to the DUT without a
           timed interaction"
