Update to JCM commissioning: - Merged with master (Required PR #39639) - Use source_set for JCMCommissioner (Validated JCM tests pass) - Rollback portion of PR #39343 which is passing the trustedIcacPublicKeyB in OnCommissioningComplete (Retested JCM commissioning completion through TransferOwnership was successful)

--- a/examples/jf-control-app/BUILD.gn
+++ b/examples/jf-control-app/BUILD.gn
@@ -165,6 +165,7 @@ executable("jfc-app") {
 
   deps = [
     ":jfc-utils",
+    "${chip_root}/src/controller:jcm",
     "${chip_root}/src/platform/logging:stdio",
   ]
 
