--- a/src/controller/tests/BUILD.gn
+++ b/src/controller/tests/BUILD.gn
@@ -39,10 +39,6 @@ chip_test_suite("tests") {
       "TestServerCommandDispatch.cpp",
     ]
 
-    if (chip_device_config_enable_joint_fabric) {
-      test_sources += [ "TestJCMCommissioner.cpp" ]
-    }
-
     # At some instances, this Test end ups allocating more than 32 Timers, and since the fake platform doesn`t use the heap, the maximum number of allowed timers is 32.
     # So we get failures because we can't allocate any more timers, in the log it looks like:
     # SendMessage() to UDP:[::1]:5541 failed: b
@@ -61,7 +57,10 @@ chip_test_suite("tests") {
   }
 
   if (chip_support_commissioning_in_controller && chip_build_controller) {
-    test_sources += [ "TestAutoCommissioner.cpp" ]
+    test_sources += [
+      "TestAutoCommissioner.cpp",
+      "TestJCMCommissioner.cpp",
+    ]
   }
 
   cflags = [ "-Wconversion" ]
@@ -70,6 +69,7 @@ chip_test_suite("tests") {
     "${chip_root}/src/app/common:cluster-objects",
     "${chip_root}/src/app/tests:helpers",
     "${chip_root}/src/controller",
+    "${chip_root}/src/controller:jcm",
     "${chip_root}/src/lib/core:string-builder-adapters",
     "${chip_root}/src/lib/support:test_utils",
     "${chip_root}/src/lib/support:testing",
