--- a/src/app/common/templates/config-data.yaml
+++ b/src/app/common/templates/config-data.yaml
@@ -56,6 +56,7 @@ CommandHandlerInterfaceOnlyClusters:
     - General Commissioning
     - General Diagnostics
     - Software Diagnostics
+    - Ethernet Network Diagnostics
     - Wi-Fi Network Diagnostics
     - Camera AV Settings User Level Management
     - Administrator Commissioning
