--- a/src/transport/raw/BUILD.gn
+++ b/src/transport/raw/BUILD.gn
@@ -24,6 +24,7 @@ static_library("raw") {
     "Base.h",
     "MessageHeader.cpp",
     "MessageHeader.h",
+    "PeerAddress.cpp",
     "PeerAddress.h",
     "Tuple.h",
     "UDP.cpp",
